# homie-home

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: bluetooth.rs  config.rs  dbus.rs  endpoint.rs  files.rs  hotspot.rs  lib.rs  logger.rs  main.rs  prefs.rs  rest.rs  stdout_reader.rs  udev.rs  utils.rs
src/audio/: mod.rs  player.rs  recorder.rs
src/core/: logger.rs  mod.rs
src/device/: description.rs  hotspot.rs  mi_temp_monitor.rs  mod.rs  xiaomi.rs
src/device/piano/: mod.rs  recordings.rs
src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
