[package]
name = "rpi-server"
description = "Raspberry Pi server"
version = "1.0.0"
edition = "2021"
license = "MIT"

[profile.release]
# Reduce parallel code generation units to increase optimization.
codegen-units = 1
# Link time optimization.
lto = true
strip = true

[dependencies]
# It's used to stream data through a REST endpoint.
async-stream = "0.3.5"
futures = "0.3.30"
# Using tokio process instead of std to avoid zombie processes
# when calling commands from Actix Web endpoints.
tokio = { version = "1.38.0", features = ["macros", "process", "rt-multi-thread"] }

serde = "1.0.203"
# Used for the user configuration validation.
serde_valid = "0.24.0"

anyhow = "1.0.86"
backoff = { version = "0.4.0", features = ["tokio"] }
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.63"

# To host a static site.
actix-files = "0.6.6"
actix-web = "4.7.0"
actix-web-httpauth = "0.8.1"
async-graphql = { version = "7.0.7", features = ["chrono"] }
async-graphql-actix-web = "7.0.7"

bluez-async = "0.7.2"
chrono = "0.4.38"
figment = { version = "0.10.19", features = ["env", "yaml"] }
tokio-udev = "0.9.1"
# We are using Bluetooth service and characteristic UUIDs.
uuid = "1.10.0"
