[package]
name = "homie-home"
description = "Raspberry Pi server for the smart homie things"
version = "1.0.0"
edition = "2021"
license = "MIT"

[profile.release]
# Reduce parallel code generation units to increase optimization.
codegen-units = 1
# Link time optimization.
lto = true
strip = true

[dependencies]
# It's used to stream data through a REST endpoint.
async-stream = "0.3.5"
futures = "0.3.30"
# Using tokio process instead of std to avoid zombie processes
# when calling commands from Actix Web endpoints.
tokio = { version = "1.38.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
] }

serde = "1.0.203"
# Used for the user configuration validation.
serde_valid = "0.24.0"
# For reading / writing the user preferences.
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }

anyhow = "1.0.86"
backoff = { version = "0.4.0", features = ["tokio"] }
log = { version = "0.4.21", features = ["serde"] }
systemd-journal-logger = "2.1.1"
thiserror = "1.0.63"

# To host a static site.
actix-files = "0.6.6"
actix-web = { version = "4.7.0", features = [
    "cookies",
    "macros",
], default-features = false }
actix-web-httpauth = "0.8.1"
async-graphql = { version = "7.0.7", features = [
    "chrono",
], default-features = false }
async-graphql-actix-web = "7.0.7"

# FLAC decoding.
claxon = "0.4.3"
cpal = "0.15.3"
# Used to store records.
flac-bound = "0.3.0"
# Used to create WAV.
hound = "3.5.1"
# Embed metadata into the records.
metaflac = "0.2.7"
# See a commit to know why the fork is required: https://github.com/lem0nez/rodio/commit/f6f861e.
rodio = { git = "https://github.com/lem0nez/rodio.git", branch = "v0.19.0-patch", features = [
    "flac",
    "wav",
], default-features = false }

bluez-async = "0.7.2"
chrono = { version = "0.4.38", default-features = false }
figment = { version = "0.10.19", features = ["env", "yaml"] }
mime = "0.3.17"
tokio-udev = "0.9.1"
# We are using Bluetooth service and characteristic UUIDs.
uuid = "1.10.0"
zbus = { version = "4.4.0", features = ["tokio"], default-features = false }
